--- a/paypal-webhook-test.html
+++ b/paypal-webhook-test.html
@@ -2,12 +2,8 @@
 <html lang="lt">
 <head>
   <meta charset="UTF-8">
-  <title>PayPal Sandbox mokėjimo testas</title>
+  <title>PayPal Webhook testas</title>
   <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=EUR"></script>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 40px; }
-    h2 { margin-bottom: 20px; }
-  </style>
 </head>
 <body>
   <h2>PayPal Sandbox mokėjimo testas</h2>
@@ -23,6 +19,13 @@
       onApprove: function(data, actions) {
         return actions.order.capture().then(function(details) {
           alert('Mokėjimas atliktas: ' + details.payer.name.given_name);
+          
+          // Siunčiame į serverį
+          return fetch('/paypal-webhook', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(details)
+          });
         });
       }
     }).render('#paypal-button-container');
